# X3r0Day-Specter

./: .gitignore  LICENSE  PLAN.md  README.md  main.py  pyproject.toml
packaging/aur/: README.md
packaging/aur/specter/: .SRCINFO  PKGBUILD
packaging/aur/specter-git/: .SRCINFO  PKGBUILD
specter/: __init__.py  __main__.py  cli.py
specter/core/: __init__.py  results.py
specter/scanner/: __init__.py  port_scan.py  subdomain.py
src/core/: __init__.py  results.py
src/scanner/: __init__.py  port_scan.py  subdomain.py
