[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "x3r0day-specter"
version = "0.1.0"
description = "Subdomain enumeration and TCP port scanning."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "X3r0Day" }]
dependencies = ["rich>=13.7.0"]
keywords = ["cli", "recon", "scanner", "security", "subdomain", "tcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Security",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://x3r0day.me"
Repository = "https://github.com/x3r0day/x3r0day-specter"

[project.scripts]
specter = "specter.cli:main"

[tool.setuptools.packages.find]
include = ["specter*"]
